# gemini-youtube-test

./: Makefile  README.md  article.py  common.py  fall-json.py  fall-text.py  neolatin-json.py  pyproject.toml  schema-1.json  schema-a.json  schema-m.json  test-article.py  test-json.py  test-text.py  test_common.py
article/: fall-15p-en.md  fall-15p-ja.md  fall-20f-en.md  fall-20f-ja.md  fall-20f.md  fall-20p-en.md  fall-20p-ja.md  fall-25f-en.md  fall-25f-ja.md  fall-25p-en.md  fall-25p-ja.md  fall-25p.md  neolatin-15p-en.md  neolatin-15p-ja.md  neolatin-20f-en.md  neolatin-20f-ja.md  neolatin-20f.md  neolatin-20p-en.md  neolatin-20p-ja.md  neolatin-25p-en.md  neolatin-25p-ja.md  neolatin-25p.md
fall-json/: 20f-m.json  25p-m.json
fall-text/: 20f-ja.md  25p-en.md  _test.md
gemini_yt/: __init__.py  __main__.py  gemini.py
json/: fall-15p-1.json  fall-15p-m.json  fall-20f-1.json  fall-20p-1.json  fall-20p-m.json  fall-25f-1.json  fall-25f-m.json  fall-25p-1.json  neolatin-15p-1.json  neolatin-15p-m.json  neolatin-20f-1.json  neolatin-20f-m.json  neolatin-20p-1.json  neolatin-20p-m.json  neolatin-25p-1.json  neolatin-25p-m.json
test/: test-json.py  test-text.py
test/json/: fall-01.json  fall-02.json  neolatin-01.json  neolatin-02.json  neolatin-03.json  neolatin-04.json
test/text/: neolatin-01.md  neolatin-02.md  neolatin-03.md  neolatin-04.md  neolatin-05.md  neolatin-06.md  neolatin-07.md
text/: fall-15p-en.md  fall-15p-ja.md  fall-20f-en.md  fall-20f-ja-test.md  fall-20p-en.md  fall-20p-ja.md  fall-25f-en.md  fall-25f-ja.md  fall-25p-ja.md
